<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.epam.themes.uicomponents.RoundedCornerImageView
                android:id="@+id/podcast_image_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/podcast_logo_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@id/podcast_image_1"
                android:text="@string/developer_growth"
                android:textColor="@color/real_black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/podcast_image_1"
                android:paddingBottom="18dp"
                android:text="@string/google_podcast_time_2"
                android:textColor="#777777" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_play_blue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <include layout="@layout/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.epam.themes.uicomponents.CircularImageView
                android:id="@+id/podcast_image_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/podcast_logo_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@id/podcast_image_2"
                android:text="@string/android_in_a_car"
                android:textColor="@color/real_black"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/podcast_image_2"
                android:paddingBottom="18dp"
                android:text="@string/google_podcast_time_1"
                android:textColor="#777777" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_play_blue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <include layout="@layout/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.epam.themes.uicomponents.CircularImageView
                android:id="@+id/podcast_image_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/podcast_logo_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@id/podcast_image_3"
                android:text="@string/developer_growth"
                android:textColor="@color/real_black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/podcast_image_3"
                android:paddingBottom="18dp"
                android:text="@string/google_podcast_time_3"
                android:textColor="#777777" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_play_blue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
