<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/vkpage_toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollable_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toTopOf="@+id/vkpage_toolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image" />
            </LinearLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/vk_page_middle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/header_photo">

                <LinearLayout
                    android:id="@+id/information_widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/vk_page_edit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/button_rounded"
                        android:text="@string/edit_vk_page"
                        android:textAllCaps="false"
                        android:textColor="@color/vk_page_edit_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_chat_bubble"
                        android:drawablePadding="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/change_status" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_people"
                            android:drawablePadding="15dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:text="@string/friends_number" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <com.epam.themes.uicomponents.CircularImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="50dp"
                                android:src="@drawable/friend_1" />

                            <com.epam.themes.uicomponents.CircularImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="35dp"
                                android:src="@drawable/friend_2" />

                            <com.epam.themes.uicomponents.CircularImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:src="@drawable/friend_3" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_followers"
                        android:drawablePadding="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/followers_number" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_home"
                        android:drawablePadding="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/lives_in" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_more"
                        android:drawablePadding="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/show_info"
                        android:textColor="#54A2BE" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/grey"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/whats_new"
                    app:layout_constraintTop_toBottomOf="@id/information_widget" />

                <RelativeLayout
                    android:id="@+id/whats_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/information_widget">

                    <com.epam.themes.uicomponents.CircularImageView
                        android:id="@+id/profile_image_whats_new"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/profile_image" />

                    <TextView
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/profile_image_whats_new"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/what_s_new" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="50dp"
                        app:srcCompat="@drawable/ic_image_grey" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/ic_camera" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/grey"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/vk_page_footer"
                    app:layout_constraintTop_toBottomOf="@id/whats_new" />

                <LinearLayout
                    android:id="@+id/vk_page_footer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="30"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/separator"
                    app:layout_constraintVertical_weight="30">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/photos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/photos"
                            android:textColor="@color/real_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photos_number" />
                    </LinearLayout>


                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="135dp"
                                android:layout_height="85dp"
                                android:layout_margin="5dp"
                                android:adjustViewBounds="true"
                                android:visibility="visible"
                                app:srcCompat="@drawable/carousel_1" />

                            <ImageView
                                android:layout_width="135dp"
                                android:layout_height="85dp"
                                android:layout_margin="5dp"
                                android:adjustViewBounds="true"
                                android:visibility="visible"
                                app:srcCompat="@drawable/carousel_2" />

                            <ImageView
                                android:layout_width="135dp"
                                android:layout_height="85dp"
                                android:layout_margin="5dp"
                                android:adjustViewBounds="true"
                                android:visibility="visible"
                                app:srcCompat="@drawable/carousel_3" />

                            <ImageView
                                android:layout_width="135dp"
                                android:layout_height="85dp"
                                android:layout_margin="5dp"
                                android:adjustViewBounds="true"
                                android:visibility="visible"
                                app:srcCompat="@drawable/carousel_4" />
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_vk_page_bottom" />
</android.support.constraint.ConstraintLayout>
